# obj-sequence-to-alembic

./: .gitignore  CMakeLists.txt  OBJ_to_ABC.command  README.md  build.sh  gui.py  launch_gui.sh
Objs2Abc/: Objs2Abc.cpp
docs/: RELEASING.md
scripts/: package_release.sh  publish_release.sh
